Agregacion optativa del boton Mostrar todos los registros

--- a/views/submenu3-1.html
+++ b/views/submenu3-1.html
@@ -23,6 +23,10 @@
       <tbody id="tablaChoferes">
       </tbody>
     </table>
+    <!--Botón optativo para regresar todas las filas de la tabla-->
+    <div id="volverMostrarTodos" class="text-center mt-3" style="display: none;">
+      <button class="btn btn-outline-secondary" onclick="mostrarTodosLosChoferes()">Mostrar todos los registros</button>
+    </div>
   </div>
 
   <div class="modal fade" id="modalAgregar" tabindex="-1" aria-hidden="true">
