--- a/views/submenu5-1.html
+++ b/views/submenu5-1.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .table-reportes .text-center {
-      background-color: #2a20e8;
+      background-color: #343a40;
       color: white;
       font-weight: bold;
     }
@@ -19,7 +19,7 @@
     }
 
     .table-reportes thead th {
-      background-color: #343a40;
+      background-color: #4f5358;
       color: white;
       text-align: center;
       border-bottom: 2px solid #333;
